--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
 
            <!-- 99 Questions Radio Input -->
-           <div class="radio-container  ">
+           <div class="radio-container ">
             <label for="value-99">99 Questions</label>
             <input type="radio" name="questions" value="99" id="value-99">
             <span class="best-score">
@@ -62,10 +62,9 @@
               <span class="best-score-value">0.0s</span>
             </span>
         </div>
-
-            </div>
+     </div>
             <!-- start Button  -->
-            <div class="slection-footer">
+            <div class="selection-footer">
               <button class="start" type="submit">Start Round</button>
             </div>
           </form>
@@ -74,16 +73,16 @@
 
 
            <!--Countdown page -->
-           <div class="card" id="countdown-page" hidden>
+           <div class="card" id="countdown-page" hidden >
              <h1 class="countdown">3</h1>
            </div>
 
 
            <!-- Game Page -->
-           <div class="card" id="game-page">
+           <div class="card" id="game-page" hidden>
                 <!-- item-container -->
                 <div class="item-container">
-                  <div class="selected-item">  </div>
+                  <div class="selected-item"></div>
                   <div class="item">
                   <h1>3 x 3 = 30</h1>
                 </div>
@@ -96,7 +95,7 @@
                 <div class="item">
                   <h1>3 x 3 = 30</h1>
                 </div>
-                <div class="item">
+                <div class="item ">
                   <h1>3 x 3 = 30</h1>
                 </div>
                 <div class="item">
@@ -113,8 +112,25 @@
              <button class="wrong">Wrong</button>
              <button class="right">Right</button>
            </div>
+           </div>
 
-      </div>
+           <!-- Score page -->
+           <div class="card" id="score-page">
+             <!-- Score Container -->
+             <div class="score-container">
+               <h1 class="title">Your Time</h1>
+               <h1 class="final-time">3.4s</h1>
+               <h1 class="base-time">Base Time: 2.4s</h1>
+               <h1 class="penalty-time">Penalty: +1.0s</h1>
+             </div>
+             <!-- play again -->
+             <div class="score-footer">
+               <button class="play-again">Play again</button>
+             </div>
+
+           </div>
+
+    
 
   
 
